--- a/portfolio.html
+++ b/portfolio.html
@@ -131,7 +131,7 @@
       <section class="filter section">
         <div class="container">
           <ul class="filter-nav list">
-            <li class="item">
+            <li class="filter-nav__item">
               <button type="button" class="filter-nav__button button">
                 Все
               </button>
