--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
             </span>
             <div class="form-checkbox__thumb">
               <span class="checkbox-label"
-                >Соглашаюсь с рассылкой и принимаю &nbsp;</span
+                >Соглашаюсь с рассылкой и принимаю</span
               >
               <a href="#" class="checkbox-link"> Условия договора</a>
             </div>
