--- a/index.html
+++ b/index.html
@@ -913,12 +913,12 @@
                 <use href="./images/icons.svg#icon-check"></use>
               </svg>
             </span>
-            <div class="form-checkbox__thumb">
+            <!-- <div class="form-checkbox__thumb"> -->
               <span class="checkbox-label"
-                >Соглашаюсь с рассылкой и принимаю</span
+                >Соглашаюсь с рассылкой и принимаю &nbsp;</span
               >
               <a href="#" class="checkbox-link"> Условия договора</a>
-            </div>
+            <!-- </div> -->
           </label>
 
           <div class="thumb-button">
