--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <use href="./images/icons.svg#icon-burger-close"></use>
             </svg>
           </button>
-
+      
           <ul class="mobile-menu__nav list">
             <li class="mobile-menu__item line">
               <a class="mobile-menu__link current link" href="">Студия</a>
@@ -87,40 +87,44 @@
             </li>
           </ul>
 
-          <ul class="mobile-contacts list">
-            <li class="mobile-contacts__item">
-              <a
-                href="tel:+380961111111"
-                class="mobile-contacts__cont mob link"
-              >
-                +38 096 111 11 11
-              </a>
-            </li>
+          <div class="mobile-menu__thumb">
+            <ul class="mobile-contacts list">
+              <li class="mobile-contacts__item">
+                <a
+                  href="tel:+380961111111"
+                  class="mobile-contacts__cont mob link"
+                >
+                  +38 096 111 11 11
+                </a>
+              </li>
+  
+              <li class="mobile-contacts__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="mobile-contacts__cont link"
+                >
+                  info@devstudio.com
+                </a>
+              </li>
+            </ul>
+  
+            <ul class="mobile-social-list list">
+              <li class="mobile-social-list__item">
+                <a href="#" class="mobile-social-list__link link">Instagram</a>
+              </li>
+              <li class="mobile-social-list__item">
+                <a href="#" class="mobile-social-list__link link">Twitter</a>
+              </li>
+              <li class="mobile-social-list__item">
+                <a href="#" class="mobile-social-list__link link">Facebook</a>
+              </li>
+              <li class="mobile-social-list__item">
+                <a href="#" class="mobile-social-list__link link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+         
 
-            <li class="mobile-contacts__item">
-              <a
-                href="mailto:info@devstudio.com"
-                class="mobile-contacts__cont link"
-              >
-                info@devstudio.com
-              </a>
-            </li>
-          </ul>
-
-          <ul class="mobile-social-list list">
-            <li class="mobile-social-list__item">
-              <a href="#" class="mobile-social-list__link link">Instagram</a>
-            </li>
-            <li class="mobile-social-list__item">
-              <a href="#" class="mobile-social-list__link link">Twitter</a>
-            </li>
-            <li class="mobile-social-list__item">
-              <a href="#" class="mobile-social-list__link link">Facebook</a>
-            </li>
-            <li class="mobile-social-list__item">
-              <a href="#" class="mobile-social-list__link link">LinkedIn</a>
-            </li>
-          </ul>
         </div>
       </div>
     </header>
